--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   </head>
   <style>
     h2 {color: black; font-family: Helvetica}
+    p {color: black; font-family: Helvetica}
     a {color: blue; font-family: Helvetica}
   </style>
   <body>
-    In this folder you will find the homework assignments for dataprocessing
-    <a href="https://pleunbis.github.io/Data_Processing/">Link to my website</a>
-    <a href="https://pleunbis.github.io/Data_Processing/Homework/Week-2/temperatures.html">Week 2</a>
+    <h2>Homework Data Processing</h2>
+    <p>Pleun Bisseling</p>
+    <p>In this folder you will find the homework assignments for dataprocessing devided by week</p>
+    <a href="https://pleunbis.github.io/Data_Processing/Homework/Week-2/temperatures.html">Week 2: Javascript</a>
   </body>
 </html>
