--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <style>
     h2 {color: black; font-family: Helvetica}
     p {color: black; font-family: Helvetica}
-    a {color: blue; font-family: Helvetica}
+    a {color: black; font-family: Helvetica}
   </style>
   <body>
     <h2>Homework Data Processing</h2>
     <p>Pleun Bisseling</p>
-    <p>In this folder you will find the homework assignments for dataprocessing devided by week</p>
+    <p>On this website you will find my homework assignments for dataprocessing devided by week</p>
     <a href="https://pleunbis.github.io/Data_Processing/Homework/Week-2/temperatures.html">Week 2: Javascript</a>
   </body>
 </html>
