--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     h2 {color: black; font-family: Helvetica}
     p {color: black; font-family: Helvetica}
-    a {color: black; font-family: Helvetica}
+    a {color: blue; font-family: Helvetica}
   </style>
   <body>
     <h2>Homework Data Processing</h2>
