--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h2>Homework Data Processing</h2>
     <p>Pleun Bisseling</p>
-    <p>On this website you will find my homework assignments for dataprocessing devided by week</p>
+    <p>On this website you will find my homework assignments for dataprocessing divided by week</p>
     <a href="https://pleunbis.github.io/Data_Processing/Homework/Week-2/temperatures.html">Week 2: Javascript</a>
   </body>
 </html>
