--- a/Homework/Week-3/barchart.html
+++ b/Homework/Week-3/barchart.html
@@ -18,6 +18,7 @@ Studentnumber: 10591249 -->
 		<svg class="chart"></svg>
 		<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+		<script src="//rawgit.com/Caged/d3-tip/master/index.js"></script>
 		<script src="barchart.js"></script>
 	</body>
 </html>
