--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>Pleun Bisseling</p>
     <p>On this website you will find my homework assignments for dataprocessing divided by week</p>
     <a href="https://pleunbis.github.io/Data_Processing/Homework/Week-2/temperatures.html">Week 2: Javascript</a>
+    <a href="https://pleunbis.github.io/Data_Processing/Homework/Week-3/barchart.html">Week 3: Barchart</a>
   </body>
 </html>
