--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Homework Data Processing</h2>
     <p>Pleun Bisseling</p>
     <p>On this website you will find my homework assignments for dataprocessing divided by week</p>
-    <a href="https://pleunbis.github.io/Data_Processing/Homework/Week-2/temperatures.html">Week 2: Javascript</a>
-    <a href="https://pleunbis.github.io/Data_Processing/Homework/Week-3/barchart.html">Week 3: Barchart</a>
+    <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-2/temperatures.html">Week 2: Javascript</a></p>
+    <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-3/barchart.html">Week 3: Barchart</a></p>
   </body>
 </html>
