--- a/Homework/Week-4/Legend/legend.html
+++ b/Homework/Week-4/Legend/legend.html
@@ -4,7 +4,7 @@ Studentnumber: 10591249 -->
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>D3 Legend</title>
+		<title>SVG Legend</title>
 		<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<script src="legend.js"></script>
 		<style type="text/css">
