--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <p>On this website you will find my homework assignments for dataprocessing divided by week</p>
     <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-2/temperatures.html">Week 2: Javascript</a></p>
     <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-3/barchart.html">Week 3: Barchart</a></p>
+    <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-4/Legend/legend.html">Week 4: SVG legend</a></p>
+    <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-4/scatterplot.html">Week 4: D3 Scatterplot</a></p>
   </body>
 </html>
