--- a/Homework/Week-5/d3line.html
+++ b/Homework/Week-5/d3line.html
@@ -11,5 +11,18 @@ Studentnumber: 10591249 -->
 	</head>
 	<body>
 		<h1>Homework week 5: D3 Line Graph</h1>
+		<div class="container">
+			<h3>KNMI weather data from 2005 and 2015</h3>
+			<p>	
+				This multi-series linechart shows all temperatures measured at de Bilt weatherstation of the year 2005 and 2015. Below you will see the linechart for 2005. By clicking on the button you will see the linechart for 2015.
+			</p>
+			<a href="http://projects.knmi.nl/klimatologie/daggegevens/selectie.cgi">Datasource: KNMI</a>
+		</div>
+		<p>
+			<button class="button">Change to 2015</button>
+		</p>
 	</body>
+	<footer>
+		<p>Pleun Bisseling, 10591249</p>
+	</footer>
 </html>
