--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-3/barchart.html">Week 3: Barchart</a></p>
     <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-4/Legend/legend.html">Week 4: SVG legend</a></p>
     <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-4/scatterplot.html">Week 4: D3 Scatterplot</a></p>
-    <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-5/d3line.html">Week 5: D3 multiseries linegraph</a></p>
+    <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-5/d3line.html">Week 5: D3 Multiseries Linegraph</a></p>
+    <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-6/linkedviews.html">Week 6: D3 Linked Views</a></p>
   </body>
 </html>
