--- a/Homework/Week-6/linkedviews.html
+++ b/Homework/Week-6/linkedviews.html
@@ -10,7 +10,7 @@ Studentnumber: 10591249 -->
 		<script src="https://d3js.org/queue.v1.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
-        <script src="http://datamaps.github.io/scripts/datamaps.world.min.js?v=1"></script>
+        <script src="https://datamaps.github.io/scripts/datamaps.world.min.js?v=1"></script>
 		<script src="linkedviews.js"></script>
 	</head>
 	<body>
