--- a/Homework/Week-7/sources.html
+++ b/Homework/Week-7/sources.html
@@ -16,7 +16,9 @@
 	</div>
 	<div class="jumbotron">
 	<div class= "container">
+		<h2>GINI Index</h2>
 		<p><a href="https://data.worldbank.org/indicator/SI.POV.GINI?locations=ZA" class="btn btn-success btn-lg">Worldbank</a></p>
+		<h2>GDP and Average Wellbeing</h2>
 		<p><a href="http://happyplanetindex.org/countries" class="btn btn-success btn-lg">Happy Planet Index</a></p>
 	</div>
 	</div>
