--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-4/scatterplot.html">Week 4: D3 Scatterplot</a></p>
     <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-5/d3line.html">Week 5: D3 Multiseries Linegraph</a></p>
     <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-6/linkedviews.html">Week 6: D3 Linked Views</a></p>
+    <p><a href="https://pleunbis.github.io/Data_Processing/Homework/Week-7/linkedviews.html">Week 7: D3 Linked Views</a></p>
   </body>
 </html>
