--- a/Homework/Week-7/linkedviews.html
+++ b/Homework/Week-7/linkedviews.html
@@ -24,7 +24,8 @@ Studentnumber: 10591249 -->
   			<a href="sources.html">Sources</a>
 		</div>
         <div class="jumbotron">
-            <h1 class="text-center">D3 linked views</h1>
+            <h1 class="text-center">Inequality in the European Union</h1>
+            <h2 class="text-center">Ratio between GINI index, GDP and Wellbeing</h2>
         </div>
 		<div id="container" style="margin: auto; position: relative; width: 900px; height: 560px;"></div>
 	</body>
