--- a/Homework/Week-7/design.html
+++ b/Homework/Week-7/design.html
@@ -2,9 +2,9 @@
 <head>
   	<title>Design</title>
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  	<link rel="stylesheet" type="text/css" href="linkedviews.css">
+  	<link rel="stylesheet" type="text/css" href="styling/linkedviews.css">
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="bootstrap.js"></script>
+	<script src="scripts/bootstrap.js"></script>
 </head>
 <body>
 	<div class="topnav">
